header quase feito

--- a/Melqui/html/CSS/style.css
+++ b/Melqui/html/CSS/style.css
@@ -1,8 +1,52 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+
+
+html{
+    scroll-behavior: smooth;
 }
 
+body{
+    grid-template-areas: 
+   "header"
+   "main"
+   "footer";
+   grid-template-rows: 100px 1fr 100px;
+    color: white;
+    background-color: black;
+
+}
+
+header{
+    grid-area: content;
+    background-color: blue;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2rem;
+    height: 188px;
+}
+
+main{
+    grid-area: content;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+
+section{
+    height: 100vh;
+    width: 100%;
+}
+
+footer{
+    grid-area: content;
+    place-self: end center;
+    height: 50px;
+    width: 100%;
+    display: grid;
+    place-content: center;
+    border-top: 2px solid #fff;
+    font-size: .75rem;
+}
 
 
