--- a/Melqui/html/CSS/style.css
+++ b/Melqui/html/CSS/style.css
@@ -17,20 +17,29 @@ body{
 
 header{
     grid-area: content;
-    background-color: blue;
+    background-color: black;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 2rem;
-    height: 188px;
 }
 
 main{
-    grid-area: content;
     display: flex;
     flex-direction: column;
     align-items: center;
-    
+    background-color: black;
+    height: 5000px;
+}
+
+footer{
+    grid-area: content;
+    display: flex;
+    background-color: green;
+    align-items: center;
+    flex-direction: column;
+    height: 130px;
+    font-size: 2rem;
 }
 
 section{
@@ -38,15 +47,6 @@ section{
     width: 100%;
 }
 
-footer{
-    grid-area: content;
-    place-self: end center;
-    height: 50px;
-    width: 100%;
-    display: grid;
-    place-content: center;
-    border-top: 2px solid #fff;
-    font-size: .75rem;
-}
+
 
 
