--- a/Melqui/html/CSS/logo.css
+++ b/Melqui/html/CSS/logo.css
@@ -4,14 +4,14 @@
 }
 
 .logo{
-    font-size: 1.5rem;
+    font-size: 10rem;
     position: absolute;
     width: 643px;
     height: 80px;
     left: 10px;
-    font-size: 50px;
-    top: 30px;
-    font-family: 'Irish Grover', cursive;
+    font-size: 80px;
+    top: 10px;
+    font-family: 'Dancing Script', cursive;
 }
 
 
