--- a/Melqui/html/CSS/style.css
+++ b/Melqui/html/CSS/style.css
@@ -21,7 +21,7 @@ header{
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 2rem;
+    font-size: 1000px;
 }
 
 main{
