--- a/Melqui/html/CSS/secao2.css
+++ b/Melqui/html/CSS/secao2.css
@@ -1,15 +1,45 @@
 .familia-part4{
-    width: 2000px;
-    height: 1440px;
-    position: relative;
-    top: -304px; 
+    
+    
+    
+}
+.sobre-artista{
+    width: 100%;
+    height: 1200px;
+    background-image: url(../img/fundo\ jojo\ 2.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    
 }
 
+
 .sobre-autor{
-    position: relative;
-    right: -40%;
     color: yellow;
     font-family: 'Dancing Script', cursive;
-    font-size: 150px;
-    top: -1550px;   
+    font-size: 11rem; 
+    
+    padding-right: 200px;
 }
+
+img.araki{
+    height: 600px;
+    width: 507px;
+    margin-left: 200px;
+}
+
+.descri-autor{
+    font-weight: bold;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 50;
+    font-size: 50px;
+    width: 1000px;
+    height: 10px;
+    padding-left: 50px;
+    padding-top: 4px;
+}
+.sobre-autor-texto{
+    margin-left: 900px;
+    margin-top: 100px;
+}
+
