--- a/Melqui/html/CSS/style.css
+++ b/Melqui/html/CSS/style.css
@@ -5,23 +5,21 @@ html{
 }
 
 body{
-    grid-template-areas: 
-   "header"
-   "main"
-   "footer";
-   grid-template-rows: 100px 1fr 100px;
+    
     color: white;
     background-color: black;
 
 }
 
 header{
-    grid-area: content;
+    position: fixed;
+    width: 100vw;
+    z-index: 2;
     background-color: black;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    font-size: 1000px;
+    height: 130px;
 }
 
 main{
