--- a/Melqui/html/CSS/home.css
+++ b/Melqui/html/CSS/home.css
@@ -1,7 +1,7 @@
 .home{
   width: 100vw;
     height: 1080px;
-    background-image: url(../img/jojo\ tent2\ 1\ \(1\).png);
+    background-image: url(../img/logo\ part4.jpg);
     display: flex;
     justify-content: center;
     align-items: center;
