--- a/Melqui/html/CSS/style.css
+++ b/Melqui/html/CSS/style.css
@@ -27,13 +27,13 @@ main{
     flex-direction: column;
     align-items: center;
     background-color: black;
-    height: 5000px;
+    height: 5150px;
 }
 
 footer{
     grid-area: content;
     display: flex;
-    background-color: green;
+    background-color: black;
     align-items: center;
     flex-direction: column;
     height: 130px;
